--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿    <Window x:Class="Scrumproject.MainWindow"
+﻿<Window x:Class="Scrumproject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:scrumproject="clr-namespace:Scrumproject"
@@ -150,26 +150,26 @@
                         <TextBox x:Name="tbSearchReports" Height="23" Canvas.Left="30" TextWrapping="Wrap" Text="" Canvas.Top="512" Width="298" Background="Black" Foreground="White"/>
                         <Button x:Name="btnSearchReports" Content="Sök" Canvas.Left="333" Canvas.Top="512" Width="95" Background="Black" Foreground="White" Height="23"/>
                         <TextBox x:Name="tbSearchUser" Height="23" Canvas.Left="30" TextWrapping="Wrap" Text="" Canvas.Top="155" Width="294" Background="Black" Foreground="White"/>
-                        <Button x:Name="btnSearchUser1" Content="Sök" Canvas.Left="329" Canvas.Top="155" Width="99" Background="Black" Foreground="White" Height="23"/>
+                        <Button x:Name="btnSearchUser1" Content="Sök" Canvas.Left="329" Canvas.Top="155" Width="99" Background="Black" Foreground="White" Height="23" Click="btnSearchUser1_Click" IsDefault="True"/>
                         <TextBox x:Name="tbBoss" Height="23" Canvas.Left="580" TextWrapping="Wrap" Text="" Canvas.Top="189" Width="120" Background="Black" Foreground="White" SelectionBrush="#FF4375A6"/>
                         <Label x:Name="lbUserID" Content="Anst. nr" Canvas.Left="456" Canvas.Top="36" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                         <TextBox x:Name="tbUserID" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="42" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6"/>
-                        <ListBox x:Name="listBoxUsers" Height="166" Width="398" Canvas.Left="30" Background="Black" Foreground="White" Canvas.Top="-16"/>
-                        <ListView x:Name="lvCountriesEdit" Height="176" Canvas.Left="30" Canvas.Top="565" Width="398" RenderTransformOrigin="-2.41,0.58" Background="Black">
+                        <ListBox x:Name="listBoxUsers" Height="166" Width="398" Canvas.Left="30" Background="Black" Foreground="White" Canvas.Top="-16" SelectionChanged="listBoxUsers_SelectionChanged"/>
+                        <ListView x:Name="lvCountriesEdit" Height="176" Canvas.Left="30" Canvas.Top="565" Width="398" RenderTransformOrigin="-2.41,0.58" Background="Black" SelectionChanged="lvCountriesEdit_SelectionChanged_1">
                             <ListView.View>
                                 <GridView>
                                     <GridViewColumn/>
                                 </GridView>
                             </ListView.View>
                         </ListView>
-                        <TextBox x:Name="tbCountryName" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="589" Width="120"  Background="Black"/>
-                        <TextBox x:Name="tbMaxCash" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="617" Width="120" Background="Black"/>
-                        <TextBox x:Name="tbCurrency" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="645" Width="120" Background="Black" />
+                        <TextBox x:Name="tbCountryName" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="589" Width="120"  Background="Black" Foreground="White"/>
+                        <TextBox x:Name="tbMaxCash" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="617" Width="120" Background="Black" Foreground="White"/>
+                        <TextBox x:Name="tbCurrency" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="645" Width="120" Background="Black" Foreground="White" />
                         <Label x:Name="lbCountryName" Content="Landnamn:" Canvas.Left="467" Canvas.Top="583" Foreground="White"/>
                         <Label x:Name="lbMaxCash" Content="Traktamente" Canvas.Left="467" Canvas.Top="612" Foreground="White"/>
                         <Label Content="Valuta" Canvas.Left="467" Canvas.Top="645" Foreground="White" RenderTransformOrigin="0.853,0.552"/>
-                        <Button x:Name="btnAddCountry" Content="Lägg till" Canvas.Left="467" Canvas.Top="679" Width="75" Background="Black" Foreground="White"/>
-                        <Button Content="Uppdatera" Canvas.Left="547" Canvas.Top="679" Width="88" Background="Black" Foreground="White"/>
+                        <Button x:Name="btnAddCountry" Content="Lägg till" Canvas.Left="467" Canvas.Top="679" Width="75" Background="Black" Foreground="White" Click="btnAddCountry_Click_1"/>
+                        <Button Content="Uppdatera" Canvas.Left="547" Canvas.Top="679" Width="88" Background="Black" Foreground="White" Click="Button_Click_2"/>
                         <Button x:Name="btnRemoveCountry" Content="Ta bort" Canvas.Left="643" Canvas.Top="679" Width="75" RenderTransformOrigin="-0.227,0.63" Foreground="White" Background="Black"/>
                         <Label Content="Välj ett land att uppdatera eller lägg till nytt" Canvas.Left="30" Canvas.Top="539" RenderTransformOrigin="-1.322,0.379" Foreground="White"/>
                         <Button x:Name="btnLogOutChef" Content="Logga ut" Canvas.Left="721" Canvas.Top="6" Width="75" RenderTransformOrigin="0.413,-0.391" Background="White" Foreground="Black" Click="btnLogOutChef_Click" Visibility="Hidden"/>
@@ -206,6 +206,6 @@
         </Grid>
 
 
-        </ScrollViewer>
+    </ScrollViewer>
 
 </Window>
