--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -42,14 +42,12 @@
                     <Canvas Margin="13,28,9,140">
                         <DatePicker x:Name="dpStartDate" Canvas.Left="191" Canvas.Top="-9" Width="119" Height="27" Background="Black" IsTabStop="True" TabIndex="3"/>
                         <Label x:Name="lbStartDate" Content="Välj start/slutdatum                            " Canvas.Top="-9" Width="167" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
-                        <Label x:Name="lbFreeDay" Content="Ange antal lediga dagar" Canvas.Top="18" Width="197" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <Label x:Name="lbCarTripLength" Content="Lägg till bilresa" Canvas.Top="71" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="1" Canvas.Top="133" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <Label x:Name="lbLand" Content="Välj land" Canvas.Left="231" Canvas.Top="164" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <TextBox x:Name="TbCarTripLengthKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="74" Width="102" Background="Black" Foreground="White"/>
                         <Label x:Name="lbWhatHaveIDoneToday" Content="Kort resebeskrivning" Canvas.Left="434" Canvas.Top="61" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold" FontFamily="Myriad Pro"/>
                         <TextBox x:Name="tbDoneOnTrip" Height="133" Canvas.Left="435" TextWrapping="Wrap" Text="" Canvas.Top="87" Width="390" Background="Black" Foreground="White"/>
-                        <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="191" TextWrapping="Wrap" Text="" Canvas.Top="24" Width="38" Background="Black" Foreground="White"/>
                         <ComboBox x:Name="CbCountries" Canvas.Left="234" Canvas.Top="191" Width="172" SelectionChanged="CbCountries_SelectionChanged" Height="25"/>
                         <Button x:Name="BtnSaveReceipt" Content="Spara Kvitto                             " Canvas.Left="737" Canvas.Top="508" Width="88" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Padding="5,1,1,1" Click="Button_Click_1" Height="21"/>
                         <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Top="243" Width="64" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Click="btnUploadReceipt_Click" RenderTransformOrigin="0.566,-2.278" Canvas.Left="761" Height="23"/>
@@ -77,7 +75,7 @@
                         <Button x:Name="btnUpdateTotalDriven" Content="Lägg till" Canvas.Left="279" Canvas.Top="74" Width="81" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click" Height="23"/>
                         <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Top="432" Width="89" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Height="20" Click="btnDeleteCountry_Click"/>
                         <Label Content="            " Canvas.Left="236" Canvas.Top="241" Width="93" x:Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16" Background="#FF5F93AC" Height="27"/>
-                        <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="234" Canvas.Top="24" Width="172" Click="btnUpdateList_Click" Background="Black" Foreground="White" Height="23" BorderBrush="#FFCBCBCB" FontFamily="Myriad Pro"/>
+                        <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="191" Canvas.Top="25" Width="172" Click="btnUpdateList_Click" Background="Black" Foreground="White" Height="23" BorderBrush="#FFCBCBCB" FontFamily="Myriad Pro"/>
                         <TextBox x:Name="TbTotalKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="102" Width="102" Foreground="White" Background="#FF4F6C89"/>
                         <Label x:Name="LbKm" Content="" Canvas.Left="98" Canvas.Top="71" Foreground="#FF51FF00"/>
                         <Label x:Name="LbTotalKm" Content="Sammanlagd sträcka" Canvas.Left="1" Canvas.Top="97" Foreground="White" FontSize="16" FontWeight="Bold" FontFamily="Myriad Pro"/>
@@ -99,6 +97,12 @@
                         <Button x:Name="btnLogOut" Content="Logga ut" Canvas.Left="563" Canvas.Top="25" Width="75" Background="White" Foreground="Black" Visibility="Hidden" Click="btnLogOut_Click"/>
                         <Button x:Name="btnForgotPassword" Content="Glömt Lösenord" Canvas.Left="926" Canvas.Top="23" Width="134" Background="Black" Foreground="White" Height="25" TabIndex="2" Click="btnForgotPassword_Click" BorderBrush="#FFCBCBCB" FontFamily="Myriad Pro"/>
                         <Button x:Name="btnDeleteDraft" Content="Rensa Utkast" Height="41" Width="241" Canvas.Top="488" Background="Black" Click="btnDeleteDraft_Click" Foreground="White" BorderBrush="#FFCBCBCB" FontSize="24" FontFamily="Myriad Pro"/>
+                        <CheckBox x:Name="CHBVacationday" Content="LEDIG" Canvas.Left="236" Canvas.Top="300" RenderTransformOrigin="0.155,-0.438"/>
+                        <CheckBox x:Name="CHBBreakfast" Content="Frukost" Canvas.Left="236" Canvas.Top="321"/>
+                        <CheckBox x:Name="CHBLunch" Content="Lunch" Canvas.Left="236" Canvas.Top="342"/>
+                        <CheckBox x:Name="CHBDinner" Content="Middag" Canvas.Left="236" Canvas.Top="363"/>
+                        <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="66" TextWrapping="Wrap" Text="TextBox" Canvas.Top="25" Width="120"/>
+                        <TextBox x:Name="tbTotalRecieptAmount" Height="23" Canvas.Left="663" TextWrapping="Wrap" Text="TextBox" Canvas.Top="534" Width="120"/>
 
 
                     </Canvas>
